--- a/python-app/template.yaml
+++ b/python-app/template.yaml
@@ -30,7 +30,7 @@ spec:
             - dev
             - prod
 
-  # here's the steps that are executed in series in the scaffolder backend
+  # here's the steps that are executed in series in the scaffolder backend. This takes everything under template folder, and passing the parameters and rendering the actual values. Result of this step would be a file with the actual name and env
   steps:
     - id: fetchBase
       name: Fetch Base
@@ -38,23 +38,18 @@ spec:
       input:
         url: ./template
         values:
-          name: ${{ parameters.name }}
-          owner: ${{ parameters.owner }}
-
-    - id: fetchDocs
-      name: Fetch Docs
-      action: fetch:plain
-      input:
-        targetPath: ./community
-        url: https://github.com/backstage/community/tree/main/backstage-community-sessions
-
+          app_name: ${{ parameters.component_id }}
+          app_env: ${{ parameters.environment }}
+     #creates a new repo and push everything that was within the template file.     
     - id: publish
       name: Publish
       action: publish:github
       input:
+        allowedHosts:
+          - gitub.com
         description: This is ${{ parameters.name }}
-        repoUrl: ${{ parameters.repoUrl }}
-        defaultBranch: 'main'
+        repoUrl: github.com?owner=UncleBlazerr&repo=${{parameters.component_id}}
+        protectDefaultBranch: false
 
     - id: register
       name: Register
