--- a/python-app/template.yaml
+++ b/python-app/template.yaml
@@ -41,13 +41,15 @@ spec:
         values:
           app_name: ${{ parameters.component_id }}
           app_env: ${{ parameters.environment }}
+
+    
      #creates a new repo and push everything that was within the template file(the rendered files).     
     - id: publish
       name: Publish
       action: publish:github
       input:
         description: This is ${{ parameters.name }}
-        repoUrl: github.com?owner=UncleBlazerr&repo=${{parameters.component_id}}
+        repoUrl: github.com?owner=UncleBlazerr-org&repo=${{parameters.component_id}}
         protectDefaultBranch: false
     
     #Once the gitub is repo is created, we're going to register this into Backstage using the catalog register action
