adding argo cd step

--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -56,6 +56,25 @@ jobs:
           curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd
           sudo mv ./argocd /usr/local/bin/argocd
+
+      - name : Ensure argocd and app
+        shell: bash
+        run: |
+
+          #Connects the argocd repo
+          repo="https://github.com/UncleBlazerr-org/${{values.app_name}}.git"
+          argocd repolist | grep -q $repo || argocd repo add $repo
+
+          #creates the argocd app
+          argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
+            --repo $repo \
+            --path charts/$${{values.app_name}} \
+            --dest-namespace ${{values.app_env}} \
+            --dest-server https://kubernetes.default.svc \
+            --values values-${{values.app_env}}.yaml \
+            --revision main \
+            --sync-policy auto \
+            --sync-option CreateNamespace=true
           
 
       - name : Argocd app sync
@@ -68,5 +87,6 @@ jobs:
             --username admin \
             --password ${{ '${{ secrets.ARGOCD_PASSWORD }}' }}
           argocd app sync ${{values.app_name}}
+          argocd app wait ${{values.app_name}} --timeout 180
           
   
