--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -68,7 +68,7 @@ jobs:
           #creates the argocd app
           argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
             --repo $repo \
-            --path charts/$${{values.app_name}} \
+            --path charts/${{values.app_name}} \
             --dest-namespace ${{values.app_env}} \
             --dest-server https://kubernetes.default.svc \
             --values values-${{values.app_env}}.yaml \
