--- a/python-app/template/catalog-info.yaml
+++ b/python-app/template/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   description: This displays the time named ${{values.app_name}}
   # Example for optional annotations
   annotations:
-     github.com/project-slug: UncleBlazerr/${{values.app_name}}
+     github.com/project-slug: UncleBlazerr-org/${{values.app_name}}
      backstage.io/techdocs-ref: dir:.
 spec:
   type: service
